# segmentor

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: example.py  getting-started.md
docs/modules/: index.md
src/segmentor/: __init__.py
src/segmentor/helpers/: device.py
src/segmentor/helpers/app/: gradio_app.py  gradio_app2.py
src/segmentor/utils/: _types.py
src/segmentor/utils/models/: anyup.py  clip.py  dinov3.py  encoder.py
src/segmentor/utils/pipeline/: dense_features.py  history.py  main.py  segmap.py
